@@ -121,6 +121,7 @@ https://github.com/elastic/beats/compare/v5.1.1...master[Check the HEAD diff]
 - Add base for supporting prospector level processors {pull}3853[3853]
 - Add auditd module for reading audit logs on Linux. {pull}3750[3750] {pull}3941[3941]
 - Add filebeat.config.path as replacement for config_dir. {pull}4051[4051]
+- Add a `recursive_glob.enabled` setting to expand "**" in patterns. {{pull}}3980[3980]
 
 *Heartbeat*
 
